--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,6 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
+JWT_TOKEN = your_jwt_token
+
 STRIPE_SECRET_KEY=your_stripe_secret_key
